--- a/.env
+++ b/.env
@@ -6,16 +6,16 @@ ANIWATCH_API_CORS_ALLOWED_ORIGINS=<https://your-production-domain.com,https://an
 
 # RATE LIMIT
 # duration to track requests (in milliseconds) for rate limiting. here, 30*60*1000 = 1800000 = 30 minutes
-ANIWATCH_API_WINDOW_MS=1800000 
+ANIWATCH_API_WINDOW_MS=60000
 # maximum number of requests in this timeperiod
-ANIWATCH_API_MAX_REQS=70 
+ANIWATCH_API_MAX_REQS=100
 
 # CAUTION: 
 #   For personal deployments, if you wanna have rate limitting
 #   in your application, then set the env below to your deployed 
 #   instance's hostname, otherwise don't set or have it at all.
 #   If you set the env below to an incorrect value, you may face other issues.
-# ANIWATCH_API_HOSTNAME=<https://your-production-domain.com>
+# ANIWATCH_API_HOSTNAME=https://aniwatchapi-rosy.vercel.app
 
 
 # NOTE:
@@ -26,7 +26,7 @@ ANIWATCH_API_MAX_REQS=70
 ANIWATCH_API_DEPLOYMENT_ENV="vercel"
 
 # env to use optional redis caching functionality
-ANIWATCH_API_REDIS_CONN_URL=<rediss://default:your-secure-password@your-redis-instance-name.provider.com:6379>
+ANIWATCH_API_REDIS_CONN_URL=redis-19073.crce194.ap-seast-1-1.ec2.redns.redis-cloud.com:19073
 
 # Cache-Control settings for Vercel Edge Caching
 # Specifies the maximum amount of time (in seconds) a resource is considered fresh when served by a CDN cache.
