--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ ANIWATCH_API_MAX_REQS=100
 ANIWATCH_API_DEPLOYMENT_ENV="vercel"
 
 # env to use optional redis caching functionality
-ANIWATCH_API_REDIS_CONN_URL=redis-19073.crce194.ap-seast-1-1.ec2.redns.redis-cloud.com:19073
+ANIWATCH_API_REDIS_CONN_URL=
 
 # Cache-Control settings for Vercel Edge Caching
 # Specifies the maximum amount of time (in seconds) a resource is considered fresh when served by a CDN cache.
